# xpatch

./: .gitignore  Makefile  README.md  build.xml  pyproject.toml  xpatch-1.0.xsd  xpatch.py  xpatch.src.py
.build/: cmdref.xml  manual.html  xpatch.py  xpatch.src
.github/workflows/: tests.yml
doc/: cmdref.src.xml  manual.xml
patchx/: __main__.py
tests/: test_xpatch.py
xpatch/: __main__.py
