[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "patchx"
version = "1.1.0"
description = "XML-based binary patching tool with verification support"
readme = "README.md"
authors = [
    {name = "Biojet1"},
]
license = {file = "LICENSE"} 
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = ["patch", "binary", "xml", "md5", "verification"]
dependencies = []
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/biojet1/patchx"
Documentation = "https://github.com/biojet1/patchx#readme"
BugTracker = "https://github.com/biojet1/patchx/issues"
Changelog = "https://github.com/biojet1/patchx/releases"

[project.scripts]
patchx = "patchx.__main__:main"

[tool.setuptools]
packages = ["patchx"]

[tool.black]
line-length = 88

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
    "pytest>=7.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]